--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,5 @@ blank_issues_enabled: false
 contact_links:
   - name: Help and Support
     url: https://discourse.threejs.org/
-    about: Please use the forum if you have questions or need help.
+    about: Please use the forum if you have questions or need help...
+    M sorry I'm a beginner, somebody can see that ?? 
